Cleaning and repairing services

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="Clean and Repair.css">
+    <link rel="stylesheet" href="home.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CLEANING WEBSITE</title>
@@ -9,7 +9,7 @@
 <body>
     <section class="Head">
         <div class="Header">
-            <img src="./Menu-Line-1--Streamline-Micro.png" alt="" class="menu-icon">
+            <img src="./menu-icon.png" alt="" class="menu-icon">
         </div>
        
         <section class="container">
